@@ -14,6 +14,6 @@ cd $APPDIR
 
 java -Dspring.config=$APPDIR/../properties/default_db2.xml \
     -Dlog4j.configurationFile=file://$APPDIR/properties/log4j2.xml \
-    -jar lib/$APPNAME.jar -varAnnotRun "$@" > run.log 2>&1
+    -jar lib/$APPNAME.jar -removeStaleAnnots "$@" > runStale.log 2>&1
 
-mailx -s "[$SERVER] GWAS Annotation Pipeline Run" $EMAILLIST < $APPDIR/logs/summary.log
+mailx -s "[$SERVER] GWAS Annotation Pipeline Run" $EMAILLIST < $APPDIR/logs/delAnnotSummary.log
