@@ -6,14 +6,11 @@
 APPNAME=gwas-annotation-pipeline
 SERVER=`hostname -s | tr '[a-z]' '[A-Z]'`
 
-#EMAILLIST=mtutaj@mcw.edu,llamers@mcw.edu
-EMAILLIST="mtutaj@mcw.edu llamers@mcw.edu"
-
 APPDIR=/home/rgddata/pipelines/$APPNAME
 cd $APPDIR
 
 java -Dspring.config=$APPDIR/../properties/default_db2.xml \
     -Dlog4j.configurationFile=file://$APPDIR/properties/log4j2.xml \
-    -jar lib/$APPNAME.jar -varAnnotRun "$@" > run.log 2>&1
+    -jar lib/$APPNAME.jar -qtlAnnotRun -varAnnotRun "$@" > run.log 2>&1
 
-mailx -s "[$SERVER] GWAS Annotation Pipeline Run" $EMAILLIST < $APPDIR/logs/summary.log
+mailx -s "[$SERVER] GWAS Annotation Pipeline Run" mtutaj@mcw.edu,llamers@mcw.edu < $APPDIR/logs/summary.log
