@@ -1,3 +1,7 @@
+2/14/2025
+deleting stale annotations
+improving the logging
+
 9/30/2024
 Adding note to annotations that are based off EFO term
 Updating last modified date for annotations and deleting obsolete annotations
